--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Aricraft_Simulation/Assets/Background.meta
+Aricraft_Simulation/Assets/Background.meta
+Aricraft_Simulation/Assets/Background.meta
